<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">StoryMaker</string>
    <string name="title_projects">Stories</string>
    <string name="title_lessons">Lessons</string>
    <string name="action_publish">Publish</string>
    <string name="menu_new_project">New</string>
    <string name="menu_projects">Stories</string>
    <string name="menu_lessons">Lessons</string>
    <string name="menu_glossary">Glossary</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_add_media">Add</string>
    <string name="menu_capture_media">Record</string>
    <string name="menu_share_media">Share</string>
    <string name="menu_save_media">Save</string>
    <string name="menu_play_media">Play</string>
    <string name="menu_render_media">Render</string>
    <string name="menu_bug_report">Bug Report</string>
    <string name="menu_login">Login</string>
    <string name="menu_logs">Send Log</string>
    <string name="menu_update">Update</string>
    <string name="menu_about">About</string>
    <string name="menu_save_project">Save</string>
    <string name="menu_overlay_camera">Camera</string>
    <string name="menu_add_from_gallery">Import from Gallery</string>
    <string name="menu_add_new_shot">Add Clip to Scene</string>
    <string name="menu_del_shot">Delete Current Clip</string>
    <string name="menu_export_project_files">Export Project Files as Zip</string>
    <string name="welcome_message">Hey there!\nWelcome to StoryMaker</string>
    <string name="default_project_list_view">This is your first time creating a project!\n\n- tap to start -</string>
    <string name="default_project_view_message">You have choices.\nTell your story with video, audio or photos.\n\n- tap to add -</string>
    <string name="pref_out_fps_title">Output Framerate (fps)</string>
    <string name="pref_out_fps_summary">Frames per second to save output video at (15-30)</string>
    <string name="pref_out_rate_title">Output Bitrate (kbps)</string>
    <string name="pref_out_rate_summary">Bitrate of video output (300-1500)</string>
    <string name="pref_out_format_title">Output Format</string>
    <string name="pref_out_format_summary">File container format (mp4, 3gp, ogg)</string>
    <string name="pref_out_vcodec_title">Output Video Codec</string>
    <string name="pref_out_vcodec_summary">video codec (copy, libx264, etc)</string>
    <string name="pref_out_acodec_title">Output Audio Codec</string>
    <string name="pref_out_acodec_summary">audio codec (copy, aac, mp3, etc)</string>
    <string name="pref_out_vwidth_title">Custom Video Width (px)</string>
    <string name="pref_out_vwidth_summary">custom video width for outputed video</string>
    <string name="pref_out_vheight_title">Custom Video Height (px)</string>
    <string name="pref_out_vheight_summary">custom video height for outputed video</string>
    <string name="hintTitle">title</string>
    <string name="hintStartTime">start (00:00:00)</string>
    <string name="hintEndTime">duratio (00:00:00)</string>
    <string name="hintFadeIn">fade in (frames)</string>
    <string name="hintFadeOut">fade out (frames)</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="play_recording">Play</string>
    <string name="save_recording">Save</string>
    <string name="downloading_lessons_from_server_">Downloading lessons from server...</string>
    <string name="checking_for_updates_">Checking for updates...</string>
    <string name="app_name_lc">Log Collector</string>
    <string name="message_subject">Android device log</string>
    <string name="acquiring_log_progress_dialog_message">Acquiring log from the system\u2026</string>
    <string name="chooser_title">"Select an application to send the log"</string>
    <string name="failed_to_get_log_message">"Failed to get the log from the system."</string>
    <string name="main_dialog_text">"This application will attempt to collect the device log.
The collected log will be sent using an application of your choice.
You also will have an opportunity to see and modify the data being sent."
	</string>
	<string name="device_info_fmt">
Log Collector version: <xliff:g id="application_version">%s</xliff:g>\n
Device model: <xliff:g id="device_model">%s</xliff:g>\n
Firmware version: <xliff:g id="firmware_revision">%s</xliff:g>\n
Kernel version: <xliff:g id="kernel_version">%s</xliff:g>\n
Build number: <xliff:g id="build_number">%s</xliff:g>\n
</string>
    <string name="title_home_projects">Projects</string>
    <string name="title_home_activity">Activity</string>
    <string name="title_lessons_lessons">Lessons</string>
    <string name="title_lessons_glossary">Glossary</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="new_story_name_it">Name it.</string>
    <string name="new_story_working_title">Working title…</string>
    <string name="new_story_choose_something">Choose something brief that defines the topic and intrigues your audience.</string>
    <string name="new_story_choose_a_medium">Choose a medium.</string>
    <string name="new_story_simple_story">Simple Story</string>
    <string name="new_story_choose_template">Scene Template</string>
    <string name="home_new_story">MAKE A STORY</string>
    <string name="home_start_a_lesson">EXPLORE LESSONS</string>
    <string name="title_activity_new_story">You created a story!</string>
    <string name="title_activity_lessons">Lessons</string>
    <string name="title_activity_scene_editor">Scene Editor</string>
    <string name="title_activity_choose_template">Choose Template</string>
    <string name="title_activity_story_template">Template Story</string>
    <string name="tab_make">Make</string>
    <string name="tab_review">Review</string>
    <string name="tab_publish">Publish</string>
    <string name="tab_finish">Finish</string>
    <string name="tab_add_clips">Make</string>
    <string name="tab_order">Edit</string>
    <string name="story_publish_section">Section</string>
    <string name="story_publish_section_hint">Sports</string>
    <string name="story_publish_topics">Topics</string>
    <string name="story_publish_topics_hint">Gender</string>
    <string name="story_publish_location">Location</string>
    <string name="story_publish_location_hint">Enter relevant location</string>
    <string name="story_publish_share">Share</string>
    <string name="story_publish_send_via">Send Via</string>
    <string name="story_publish_status">Status</string>
    <string name="story_publish_status_processing">Processing</string>
    <string name="story_publish_status_not">Not Published</string>
    <string name="story_publish_describe_hint">Describe your story…</string>
    <string name="story_publish_story_title">Story Title here</string>
    <string name="story_publish_story_date">Story Date Here</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_test_drag">TestDrag</string>
    <string name="recording">Recording</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="storage_is_full">Storage is full</string>
    <string name="max_length_reached">Maximum length reached</string>
    <string name="insert_sd_card">SD card is required</string>
    <string name="button_ok">OK</string>
    <string name="timer_format"><xliff:g id="format">%02d</xliff:g>:<xliff:g id="format">%02d</xliff:g></string>
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="error_sdcard_access">Unable to access external or internal storage</string>
    <string name="error_app_internal">Internal application error</string>
    <string name="error_mediadb_new_record">Unable to save recorded audio</string>
    <string name="error_storage_space" formatted="false">"Whoops, we're out of space. Please make approximately %.2f%nMB available and try again!"</string>
    <string name="default_record_name">untitled record</string>
    <string name="menu_view_record_list">View record list</string>
    <string name="menu_setting">Settings</string>
    <string name="delete_dialog_title">Do you want to delete current record?</string>
    <string name="overwrite_dialog_title">%s has already existed. Do you want to overwrite it?</string>
    <string name="preferences_title">Settings</string>
    <string name="pref_title_record_type">Record file type</string>
    <string name="prefDialogTitle_recordType">Please select file type</string>
    <string name="prefDefault_recordType">audio/3gpp</string>
    <string name="pref_title_enable_high_quality">Enable high quality</string>
    <string name="pref_summary_enable_high_quality">The audio file with high quality can be larger</string>
    <string name="pref_title_enable_sound_effect">Enable sound effect</string>
    <string name="pref_summary_enable_sound_effect">Playing sound effect when the state is changed</string>
    <string name="notification_recording">Recording...</string>
    <string name="notification_stopped">Recording is stopped</string>
    <string name="notification_warning">Low storage(less than %d minutes)...</string>
    <string name="sd_card_not_available">SD card is not available</string>
    <string name="open_file_explorer">Open file explorer</string>
    <string name="alert_message_delete_record">Do you want to delete selected record?</string>
    <string-array name="prefEntries_recordType">
        <item>amr</item>
        <item>3gpp</item>
    </string-array>
    <string-array translatable="false" name="prefValues_recordType">
        <item>audio/amr</item>
        <item>audio/3gpp</item>
    </string-array>
   <string name="help_clip_select">Swipe to select a clip type, then tap the clip image to start video, photo or audio capture</string>
    <string name="lesson_status_have_not_started">Have not started</string>
    <string name="lessons_congratulations_you_have_completed_the_lesson_">You completed a lesson!</string>
    <string name="lesson_status_in_progress">In progress</string>
    <string name="lesson_status_complete">COMPLETE!</string>
    <string name="tap_to_start_capture">tap to start capture</string>
    <string name="no_lessons_available_tap_to_load_">No lessons available (tap to load)</string>
    <string name="_lesson_complete">" lesson complete"</string>
    <string name="_of_">" of "</string>
    <string name="default_youtube_desc">A StoryMaker project</string>
    <string name="view_published_media_online_or_local_copy_">View published media online?</string>
    <string name="choose_account_for_youtube_upload">Choose Account for Upload</string>
    <string name="rendering">Rendering</string>
    <string name="rendering_project_">Rendering project...</string>
    <string name="uploading">Uploading...</string>
    <string name="publishing">Publishing</string>
    <string name="connecting_to_youtube_">connecting to YouTube...</string>
    <string name="uploading_to_storymaker">publishing to StoryMaker site...</string>
    <string name="rendering_clips_">rendering clips...</string>
    <string name="you_must_enter_a_project_name">Please enter a working draft title. You can change this later.</string>
    <string name="delete_project_">Delete project?</string>
    <string name="add_new_clip_to_the_scene_">Add new clip to the scene?</string>
    <string name="drawer_profile">Login</string>
    <string name="video_project_project_type">Video Project</string>
</resources>