<menu xmlns:android="http://schemas.android.com/apk/res/android">
      
    <item android:id="@+id/menu_new_project"
        android:title="@string/menu_new_project"
        android:orderInCategory="100"
        android:showAsAction="always" />
    
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="1"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_new_project2"
        android:title="@string/menu_new_project"
        android:orderInCategory="2"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_logs"
        android:title="@string/menu_logs"
        android:orderInCategory="3"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="4"
        android:showAsAction="never" />
    
</menu>
